playbooks/application/roles/storage/files/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-operator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: minio-tenant.k3s.scalehub.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-tenant
                port:
                  number: 9000
